# user-service-spike

./: .gitignore  Makefile  README.md  create_service_roles.sh  graph-permissions.json  pyproject.toml
.github/workflows/: ci.yaml
docs/: 1-context-and-adr.md  2-role-composition-and-group-naming-strategy.md  3-limitations.md  4-microsoft-graph-api-guids.md  5-az-cli-create-service-roles.md
user_service/: main.py
user_service/models/: schemas.py
user_service/routes/: customers.py  platform_roles.py  services.py  users.py
user_service/services/: graph.py
