[project]
name = "authz"
version = "0.1.0"
description = ""
authors = [
    {name = "Chas Sweeting",email = "77371250+clsweeting@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cachetools (>=5.5.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.9"
mypy = "^1.15.0"
pytest = "^8.3.5"
types-cachetools = "^5.5.0.20240820"


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]      # pycodestyle, pyflakes, isort
ignore = ["E501"]             # Ignore long lines (handled by black)
fixable = ["ALL"]
unfixable = []

[tool.black]
line-length = 120
target-version = ['py313']
